use Elasticsearch 'date' type for storing date values

--- a/pubchem-bioassays-index-config.json
+++ b/pubchem-bioassays-index-config.json
@@ -191,21 +191,8 @@
                                     }
                                 },
                                 "date": {
-                                    "properties": {
-                                        "std": {
-                                            "properties": {
-                                                "day": {
-                                                    "type": "long"
-                                                },
-                                                "month": {
-                                                    "type": "long"
-                                                },
-                                                "year": {
-                                                    "type": "long"
-                                                }
-                                            }
-                                        }
-                                    }
+                                    "type": "date",
+                                    "format": "yyyy-MM-dd"
                                 },
                                 "outcome": {
                                     "type": "string"
