--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: python
 
 python:
-  - "2.6"
+  - "2.7"
   - "3.4"
 
 install:
   - pip install -r requirements.txt
+  - python setup.py develop --user
 
-# command to run tests
 script:
   - pytest tests/test_readers.py
