--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 
 install:
   - pip install -r requirements.txt
-  - python setup.py develop --user
+  - python setup.py install
 
 script:
   - pytest tests/test_readers.py
