--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install gffutils
-  - python setup.py build
+  - python setup.py install
 
 script:
   - pytest tests/test_readers.py
