--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - "3.4"
 
 install:
-  - pip install pytz
+  - pip install gffutils SQLAlchemy pytz
   - python setup.py install
 
 script:
